k8s/overlays/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-qa
  labels:
    app.kubernetes.io/part-of: marriott-application
    app.kubernetes.io/managed-by: kustomize
    environment: qa
